@@ -1,0 +1,4 @@
+<script>
+if (window.layoutTestController)
+  layoutTestController.globalFlag = true;
+</script>
