@@ -1,3 +1,14 @@
+2009-12-21  Dirk Pranke  <dpranke@chromium.org>
+
+        Reviewed by Adam Barth.
+
+        Upstream a test from chromium.org.
+        https://bugs.webkit.org/show_bug.cgi?id=32761
+
+        * http/tests/misc/resources/content-iframe.html: Added.
+        * http/tests/misc/set-window-opener-to-null-expected.txt: Added.
+        * http/tests/misc/set-window-opener-to-null.html: Added.
+
 2009-12-21  Enrica Casucci  <enrica@apple.com>
 
         Reviewed by Maciej Stachowiak.
